<resources>
    <string name="app_name">Avis Cerrto Guidi</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_main">Avis Cerreto Guidi</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>


    // Navigation drawer
    <string name="sign_in">Sign in</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="categories">Categories</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="important">Important</string>
    <string name="documents">Documents</string>
    <string name="news">News for Avis Cerreto Guidi</string>
    <string name="booking">Booking</string>
    <string name="meteo">Weather blood</string>
    <string name="profilo">Profile</string>
    <string name="associazione">The Association</string>
    <string name="manual">Manual</string>
    <string name="credits">Credits and Privacy</string>
    <string name="site">Site web</string>
    <string name="membership">Mebership</string>
    <string name="drafts">Dama</string>
    <string name="inbox">Inbox</string>

    // Prenotazione appuntamento
    <string name="book">Book</string>
    <string name="sendmail">Send email</string>
    <string name="sendsms">Send sms</string>
    <string name="callus">Call us</string>

    <!-- Toast -->
    <string name="open_user_profile">Open user profile</string>
    <string name="open_settings">Open settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_launch_maps" translatable="false">Map</string>
    <string name="title_activity_google_play_services" translatable="false">GooglePlayServicesActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_centro_trasfusionale">Dettaglio</string>


    <!-- RISORSE PER AppIntro -->

    <!-- TITOLI -->
    <string name="titolo1">The Avis goes with you</string>
    <string name="titolo2">Donate blood saves a life</string>
    <string name="titolo3">Donate blood for someone who gives life</string>
    <string name="titolo4">From the best of you</string>

    <!-- DESCRIZIONI -->
    <string name="descrizone1">The Avis goes with you</string>
    <string name="descrizione2">Donate blood saves a life</string>
    <string name="descrizione3">Donate blood for someone who gives life</string>

    <!-- MESSAGGI -->
    <string name="skip">Y U DO DIS TO ME?</string>
    <string name="iniziamo">We begin</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_send_report">Invia crash report</string>
    <string name="pref_sync_frequency">Frequenza di Aggiornamento</string>
    <string name="pref_sync_frequency_summary">Imposta frequenza di Aggiornamento</string>
    <string name="pref_update_setting">Aggiorna</string>
    <string name="pref_user_name">Imposta Nome Utente</string>
    <string name="pref_user_profile">Profilo utente</string>
    <string name="pref_user_name_summary">Imposta il tuo profilo</string>
    <string name="wait">Wait ....</string>
    <string name="load_news">Wait loading news</string>
    <string name="centri_trasfusionali">Blood Center</string>


    <string name="changelog_title_standarddialog" translatable="false">Changelog Avis Cerreto Guidi</string>
    <string name="about_ok">OK</string>
    <string name="centro_trasfusionale">Centro Trasfusionale</string>
    <string name="centro_trasfusionale_ciita">Città</string>
    <string name="centro_trasfusionale_via">Via</string>
    <string name="centro_trasfusionale_telefono">055</string>
    <string name="centro_trasfusionale_fax">055</string>
    <string name="content_share_on_google">Share on Google+</string>
    <string name="content_image_description" translatable="false"></string>
    <string name="card_consiglio_nome" translatable="false">Cognome e Nome</string>
    <string name="card_cosiglio" translatable="false">Ruolo</string>
    <string name="card_consiglio_email" translatable="false">Email</string>
    <string name="card_news_titolo" translatable="false">Titolo</string>
    <string name="card_news_descrizone" translatable="false">descrizone della news in breve</string>
    <string name="card_consiglio_ruolo" translatable="false">Ruolo</string>
    <string name="avis_comunale_cerreto" translatable="false">Avis Comunale Cerreto Guidi</string>
    <string name="donazione_perche_donare">Perchè donare</string>
    <string name="donazione_chi_puo_donare">Chi può donare</string>
    <string name="donazione_idoneita">Idonietà alla donazione</string>
    <string name="donazione_come_donare">Come donare</string>
    <string name="donazione_prima_di_donare">Prima di una donazione</string>
    <string name="donazione_tipologie">Tipologie di donazione</string>
    <string name="donazione_il_sangue">Il Sangue</string>
    <string name="prenotazione_chiamaci">Chiamaci</string>
    <string name="prenotazione_sms">Invia un SMS</string>
    <string name="prenotazione_email">Mandaci una email</string>


</resources>
