<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    tools:context="it.nicolabrogelli.aviscerrtoguidi.controller.DetailActivity">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/splahlogo"
        android:scaleType="centerCrop"
        android:layout_above="@+id/webView"
        android:contentDescription="@string/content_image_description"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/textViewTitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wait"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/webView"
        android:layout_alignEnd="@+id/webView" />

    <Button
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignBottom="@id/webView"
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_share_on_google"
        android:background="#DF5138"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
