<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/card_consiglio_nome"
            android:textStyle="bold|italic"
            android:textSize="28sp"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_marginStart="5dp">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@mipmap/ic_no_user"
                        android:contentDescription="@string/content_image_description"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ruolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_consiglio_ruolo"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/struttura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avis_comunale_cerreto"
                        android:gravity="center_vertical"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>