<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="fill_parent"
    android:layout_height="450dp"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_margin="2dp"
            android:id="@+id/image"
            android:scaleType="centerCrop"
            android:src="@drawable/foto"
            android:contentDescription="@string/content_image_description"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:background="#5c1b1b1b"
            android:alpha="0.8"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/card_news_titolo"
            android:layout_alignBottom="@+id/image"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/riassunto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:alpha="0.8"
            android:textColor="#ff272727"
            android:textSize="15sp"
            android:text="@string/card_news_descrizone"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>

</android.support.v7.widget.CardView>